--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/ukraine/style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Государственная символика | Украина</title>
 
 </head>
@@ -34,61 +36,69 @@
         </div>
     </header>
     <main>
-        <h2>Греб Украины</h2>
-        <hr>
-        <br>
-        <p>
-            Герб Украи́ны (укр. Герб України) — один из трёх официальных символов государства, наряду с флагом и
-            гимном. Состоит из Малого и Большого гербов. В настоящее время используется в основном только Малый герб,
-            <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="">
-            утверждённый 19 февраля 1992 года.
-        </p>
-        <br>
-        <p>
-            Центральной геральдической фигурой обоих гербов является «трезубец» (укр. тризуб) князя Владимира. Кроме
-            того, элементами Большого герба должны быть также казак с мушкетом (символ Войска
-            Запорожского) и коронованный лев (герб Галицкой Руси).
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="container">
+            <h2>Греб Украины</h2>
+            <hr>
+            <br>
+            <p>
+                Герб Украи́ны (укр. Герб України) — один из трёх официальных символов государства, наряду с флагом и
+                гимном. Состоит из Малого и Большого гербов. В настоящее время используется в основном только Малый
+                герб,
+                <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="">
+                утверждённый 19 февраля 1992 года.
+            </p>
+            <br>
+            <p>
+                Центральной геральдической фигурой обоих гербов является «трезубец» (укр. тризуб) князя Владимира. Кроме
+                того, элементами Большого герба должны быть также казак с мушкетом (символ Войска
+                Запорожского) и коронованный лев (герб Галицкой Руси).
+            </p>
+            <br>
+            <br>
+            <br>
+            <br>
 
-        <h2>Флаг Украины</h2>
-        <hr>
-        <br>
-        <p>
-            официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
-            символов украинцев.
-            Представляет собой прямоугольное полотнище из двух <img
-                src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png"> равновеликих горизонтальных полос: верхней —
-            синего и
-            нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
-            отличаться как в сторону голубого, так и в сторону тёмно-синего.
-        </p>
-        <br>
-        <br>
-        <br>
-        <h2>Гимн Украины</h2>
-        <hr>
-        <br>
-        <p>
-            Государственным гимном Украины является песня «Ще не вмерла України і Слава, і Воля», музыку к которой
-            написал Михаил Вербицкий, а слова Павел Чубинский. Гимн утверждён 15 января 1992, современный текст
-            утверждён 6 марта 2003 года.
-        </p>
-        <br>
+            <h2>Флаг Украины</h2>
+            <hr>
+            <br>
+            <p>
+                официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
+                символов украинцев.
+                Представляет собой прямоугольное полотнище из двух <img
+                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png"> равновеликих горизонтальных
+                полос: верхней —
+                синего и
+                нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
+                отличаться как в сторону голубого, так и в сторону тёмно-синего.
+            </p>
+            <br>
+            <br>
+            <br>
+            <h2>Гимн Украины</h2>
+            <hr>
+            <br>
+            <p>
+                Государственным гимном Украины является песня «Ще не вмерла України і Слава, і Воля», музыку к которой
+                написал Михаил Вербицкий, а слова Павел Чубинский. Гимн утверждён 15 января 1992, современный текст
+                утверждён 6 марта 2003 года.
+            </p>
+            <br>
+        </div>
         <audio controls>
-            <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" type="audio/mpeg">
+            <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
+                type="audio/mpeg">
             Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте музыку</a>.
+            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте
+                музыку</a>.
         </audio>
     </main>
     <footer>
         <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
-
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+        integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
