--- a/country/index.html
+++ b/country/index.html
@@ -47,7 +47,7 @@
                     <li>Центральная Азия:  Казахстан,  Киргизия,  Таджикистан,  Туркмения и  Узбекистан.</li>
                 </ul>
             </p>
-            <table border="1">
+            <table>
                 <tr>
                     <th>Страна</th>
                     <th>Герб</th>
@@ -74,8 +74,8 @@
                 </tr>
                 <tr>
                     <td><a href="/political-na-postsovet-space/country/russia">Российская Федерация</a></td>
-                    <td></td>
-                    <td></td>
+                    <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" alt=""></td>
+                    <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt=""></td>
                     <td>Москва</td>
                     <td></td>
                     <td>17 125 191</td>
