--- a/country/index.html
+++ b/country/index.html
@@ -115,51 +115,51 @@
 
                     </tr>
                     <tr>
+                        <td>Узбекистан</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Ташкент</td>
+                        <td>Республика Узбекистан</td>
+                        <td>447 400</td>
+                        <td>33 254 100</td>
+                        <td>74,1</td>
+                        <td>2019</td>
 
                     </tr>
                     <tr>
+                        <td>Казахстан</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Нур-Султан (Астана)</td>
+                        <td>16 декабря 1991</td>
+                        <td>2 724 902</td>
+                        <td>18 395 660</td>
+                        <td>6,74</td>
+                        <td>2019</td>
 
                     </tr>
                     <tr>
+                        <td>Грузия</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Тбилиси</td>
+                        <td>9 апреля 1991</td>
+                        <td>69 700</td>
+                        <td>3 729 600</td>
+                        <td>65</td>
+                        <td>2018</td>
 
                     </tr>
                     <tr>
+                        <td>Азербайджан</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Баку</td>
+                        <td>30 августа 1991</td>
+                        <td>86 600</td>
+                        <td>9 981 457</td>
+                        <td>115</td>
+                        <td>2019</td>
                     </tr>
                     <tr>
                         <td></td>
