--- a/country/index.html
+++ b/country/index.html
@@ -92,8 +92,8 @@
                     </tr>
                     <tr>
                         <td>Украина</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""></td>
                         <td>Киев</td>
                         <td>24 августа 1991</td>
                         <td>603 549</td>
