--- a/country/index.html
+++ b/country/index.html
@@ -162,10 +162,54 @@
                         <td>2019</td>
                     </tr>
                     <tr>
+                        <td>Литва</td>
                         <td></td>
                         <td></td>
+                        <td>Вильнюс</td>
+                        <td>11 марта 1990</td>
+                        <td>65 301</td>
+                        <td>2 797 154</td>
+                        <td>43</td>
+                        <td>2018</td>
+                    </tr>
+                    <tr>
+                        <td>Молдавия</td>
                         <td></td>
                         <td></td>
+                        <td>Кишинёв</td>
+                        <td>27 августа 1991</td>
+                        <td>33 846</td>
+                        <td>3 550 900</td>
+                        <td>119</td>
+                        <td>2018</td>
+                    </tr>
+                    <tr>
+                        <td>Латвия</td>
+                        <td></td>
+                        <td></td>
+                        <td>Рига</td>
+                        <td>4 мая 1990</td>
+                        <td>64 589</td>
+                        <td>1 934 379</td>
+                        <td>29,95</td>
+                        <td>2018</td>
+                    </tr>
+                    <tr>
+                        <td>Киргизия</td>
+                        <td></td>
+                        <td></td>
+                        <td>Бишкек</td>
+                        <td>31 августа 1991</td>
+                        <td>199 951</td>
+                        <td>6 389 500</td>
+                        <td>31</td>
+                        <td>2019</td>
+                    </tr>
+                    <tr>
+                        <td>Таджикистан</td>
+                        <td></td>
+                        <td></td>
+                        <td>Душанбе</td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -173,21 +217,10 @@
                         <td></td>
                     </tr>
                     <tr>
+                        <td>Армения</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Ереван</td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -195,21 +228,10 @@
                         <td></td>
                     </tr>
                     <tr>
+                        <td>Туркменистан</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Ашхабад</td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -217,32 +239,10 @@
                         <td></td>
                     </tr>
                     <tr>
+                        <td>Эстония</td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Таллин</td>
                         <td></td>
                         <td></td>
                         <td></td>
