--- a/country/index.html
+++ b/country/index.html
@@ -66,8 +66,8 @@
                 <tbody class="ussr">
                     <tr>
                         <td>СССР</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-USSR.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-USSR.png" alt=""></td>
                         <td>Москва</td>
                         <td>26 декабря 1991</td>
                         <td>22 402 200</td>
@@ -210,44 +210,44 @@
                         <td></td>
                         <td></td>
                         <td>Душанбе</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>9 сентября 1991</td>
+                        <td>143 100</td>
+                        <td>9 031 000</td>
+                        <td>60</td>
+                        <td>2018</td>
                     </tr>
                     <tr>
                         <td>Армения</td>
                         <td></td>
                         <td></td>
                         <td>Ереван</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>21 сентября 1991</td>
+                        <td>29 743	</td>
+                        <td>2 986 100</td>
+                        <td>100,4</td>
+                        <td>2017</td>
                     </tr>
                     <tr>
                         <td>Туркменистан</td>
                         <td></td>
                         <td></td>
                         <td>Ашхабад</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>27 октября 1991</td>
+                        <td>491 200</td>
+                        <td>5 758 075</td>
+                        <td>10</td>
+                        <td>2017</td>
                     </tr>
                     <tr>
                         <td>Эстония</td>
                         <td></td>
                         <td></td>
                         <td>Таллин</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>21 августа 1991</td>
+                        <td>45 227</td>
+                        <td>1 323 824</td>
+                        <td>28</td>
+                        <td>2019</td>
                     </tr>
                 </tbody>
             </table>
