--- a/country/index.html
+++ b/country/index.html
@@ -104,8 +104,8 @@
                     </tr>
                     <tr>
                         <td>Беларусь</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/country/gerb-of-Belarus.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/country/flag-of-Belarus.png" alt=""></td>
                         <td>Минск</td>
                         <td>25 августа 1991</td>
                         <td>207 600</td>
