--- a/country/index.html
+++ b/country/index.html
@@ -116,8 +116,8 @@
                     </tr>
                     <tr>
                         <td>Узбекистан</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Uzbekistan.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Uzbekistan.png" alt=""></td>
                         <td>Ташкент</td>
                         <td>Республика Узбекистан</td>
                         <td>447 400</td>
