--- a/country/index.html
+++ b/country/index.html
@@ -140,8 +140,8 @@
                     </tr>
                     <tr>
                         <td>Грузия</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Georgia.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Georgia.png" alt=""></td>
                         <td>Тбилиси</td>
                         <td>9 апреля 1991</td>
                         <td>69 700</td>
