--- a/country/index.html
+++ b/country/index.html
@@ -50,18 +50,18 @@
             </p>
             <table border="1" rules="all" class="table text-info">
                 <thead class="table-primary">
-                <tr>
-                    <th scope="col">Страна</th>
-                    <th scope="col">Герб</th>
-                    <th scope="col">Флаг</th>
-                    <th>Столица</th>
-                    <th>Дата независимости / дата распада СССР</th>
-                    <th>Территория (км<sup>2</sup>)</th>
-                    <th>Население</th>
-                    <th>Плотность населения (чел./ км<sup>2</sup>)</th>
-                    <th>Дата</th>
+                    <tr>
+                        <th scope="col">Страна</th>
+                        <th scope="col">Герб</th>
+                        <th scope="col">Флаг</th>
+                        <th>Столица</th>
+                        <th>Дата независимости / дата распада СССР</th>
+                        <th>Территория (км<sup>2</sup>)</th>
+                        <th>Население</th>
+                        <th>Плотность населения (чел./ км<sup>2</sup>)</th>
+                        <th>Дата</th>
 
-                </tr>
+                    </tr>
                 </thead>
                 <tbody class="ussr">
                     <tr>
@@ -128,8 +128,10 @@
                     </tr>
                     <tr>
                         <td>Казахстан</td>
-                        <td><img src="/political-na-postsovet-space/country/kazakhstan/gerb-of-Kazakhstan.png" alt=""></td>
-                        <td><img src="/political-na-postsovet-space/country/kazakhstan/flag-of-Kazakhstan.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/country/kazakhstan/gerb-of-Kazakhstan.png" alt="">
+                        </td>
+                        <td><img src="/political-na-postsovet-space/country/kazakhstan/flag-of-Kazakhstan.png" alt="">
+                        </td>
                         <td>Нур-Султан (Астана)</td>
                         <td>16 декабря 1991</td>
                         <td>2 724 902</td>
@@ -152,8 +154,8 @@
                     </tr>
                     <tr>
                         <td>Азербайджан</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/country/azerbaijan/gerb-of-Azerbaijan.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/country/azerbaijan/flag-of-Azerbaijan.png" alt=""></td>
                         <td>Баку</td>
                         <td>30 августа 1991</td>
                         <td>86 600</td>
@@ -222,7 +224,7 @@
                         <td></td>
                         <td>Ереван</td>
                         <td>21 сентября 1991</td>
-                        <td>29 743	</td>
+                        <td>29 743 </td>
                         <td>2 986 100</td>
                         <td>100,4</td>
                         <td>2017</td>
