--- a/country/index.html
+++ b/country/index.html
@@ -165,8 +165,8 @@
                     </tr>
                     <tr>
                         <td>Литва</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Lithuania.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Lithuania.png" alt=""></td>
                         <td>Вильнюс</td>
                         <td>11 марта 1990</td>
                         <td>65 301</td>
@@ -176,8 +176,8 @@
                     </tr>
                     <tr>
                         <td>Молдавия</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Moldova.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Moldova.png" alt=""></td>
                         <td>Кишинёв</td>
                         <td>27 августа 1991</td>
                         <td>33 846</td>
@@ -187,8 +187,8 @@
                     </tr>
                     <tr>
                         <td>Латвия</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Latvia.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Latvia.png" alt=""></td>
                         <td>Рига</td>
                         <td>4 мая 1990</td>
                         <td>64 589</td>
@@ -198,8 +198,8 @@
                     </tr>
                     <tr>
                         <td>Киргизия</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Kyrgystan.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Kyrgystan.png" alt=""></td>
                         <td>Бишкек</td>
                         <td>31 августа 1991</td>
                         <td>199 951</td>
