--- a/country/index.html
+++ b/country/index.html
@@ -220,8 +220,8 @@
                     </tr>
                     <tr>
                         <td>Армения</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/armenia/gerb-of-Armenia.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/armenia/flag-of-Armenia.png" alt=""></td>
                         <td>Ереван</td>
                         <td>21 сентября 1991</td>
                         <td>29 743 </td>
@@ -231,8 +231,8 @@
                     </tr>
                     <tr>
                         <td>Туркменистан</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Turkmenistan.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Turkmenistan.png" alt=""></td>
                         <td>Ашхабад</td>
                         <td>27 октября 1991</td>
                         <td>491 200</td>
@@ -242,8 +242,8 @@
                     </tr>
                     <tr>
                         <td>Эстония</td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="/political-na-postsovet-space/gerb-of-Estonia.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/flag-of-Estonia.png" alt=""></td>
                         <td>Таллин</td>
                         <td>21 августа 1991</td>
                         <td>45 227</td>
