--- a/country/index.html
+++ b/country/index.html
@@ -54,12 +54,12 @@
                         <th scope="col">Страна</th>
                         <th scope="col">Герб</th>
                         <th scope="col">Флаг</th>
-                        <th>Столица</th>
-                        <th>Дата независимости / дата распада СССР</th>
-                        <th>Территория (км<sup>2</sup>)</th>
-                        <th>Население</th>
-                        <th>Плотность населения (чел./ км<sup>2</sup>)</th>
-                        <th>Дата</th>
+                        <th scope="col">Столица</th>
+                        <th scope="col">Дата независимости / дата распада СССР</th>
+                        <th scope="col">Территория (км<sup>2</sup>)</th>
+                        <th scope="col">Население</th>
+                        <th scope="col">Плотность населения (чел./ км<sup>2</sup>)</th>
+                        <th scope="col">Дата</th>
 
                     </tr>
                 </thead>
