--- a/country/index.html
+++ b/country/index.html
@@ -154,8 +154,10 @@
                     </tr>
                     <tr>
                         <td>Азербайджан</td>
-                        <td><img src="/political-na-postsovet-space/country/azerbaijan/gerb-of-Azerbaijan.png" alt=""></td>
-                        <td><img src="/political-na-postsovet-space/country/azerbaijan/flag-of-Azerbaijan.png" alt=""></td>
+                        <td><img src="/political-na-postsovet-space/country/azerbaijan/gerb-of-Azerbaijan.png" alt="">
+                        </td>
+                        <td><img src="/political-na-postsovet-space/country/azerbaijan/flag-of-Azerbaijan.png" alt="">
+                        </td>
                         <td>Баку</td>
                         <td>30 августа 1991</td>
                         <td>86 600</td>
@@ -253,6 +255,57 @@
                     </tr>
                 </tbody>
             </table>
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="132"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="Vladimir.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Владимир Владимирович Путин</h5>
+                            <p>Президент Российской Федерации</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="800px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" class="d-block w-100"
+                            alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Владимир Александрович Зеленский</h5>
+                            <p>Президент Украины</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="Lukashenko.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Александр Григорьевич Лукашенко</h5>
+                            <p>Президент Республики Беларусь</p>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <img src="800px-Ilham_Aliyev_par_Claude_Truong-Ngoc_juin_2014.jpg" class="d-block w-100"
+                            alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>АзербайджанИльхам Алиев</h5>
+                            <p>Президент Азербайджана</p>
+                        </div>
+
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Назад</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Дальше</span>
+                </a>
+            </div>
+        </div>
 
         </div>
 
