--- a/country/index.html
+++ b/country/index.html
@@ -255,6 +255,9 @@
                     </tr>
                 </tbody>
             </table>
+            <br><br>
+            <h2>Главы стран Постсоветского пространства</h2>
+
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
