--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -17,14 +17,9 @@
         <a href="/political-na-postsovet-space/">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="/political-na-postsovet-space/country/azerbaijan/">Азербайджан</a>
-            <a href="/political-na-postsovet-space/country/armenia/">Армения</a>
-            <a href="/political-na-postsovet-space/country/belarus/" id="id">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
-            <a href="/political-na-postsovet-space/country/abkhazia/">Абхазия</a>
-            <a href="/political-na-postsovet-space/country/south-ossetia/">Южная Осетия</a>
+            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
