--- a/country/index.html
+++ b/country/index.html
@@ -44,7 +44,9 @@
                 <li>Закавказье (Передняя Азия и Восточная Европа): Азербайджан, Армения и Грузия;</li>
                 <li>Центральная Азия: Казахстан, Киргизия, Таджикистан, Туркмения и Узбекистан.</li>
             </ul>
+
             </p>
+            <p>P. S. На этом сайте будут представлены страны востчно-славянского происхождения</p>
             <table border="1" rules="all" class="table text-info">
                 <thead class="table-primary">
                     <tr>
