--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -17,9 +17,9 @@
         <a href="/political-na-postsovet-space/">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Украина</a>
+            <a href="/political-na-postsovet-space/country/belarus/"id="id">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/russia/" >Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
