--- a/country/dni/index.html
+++ b/country/dni/index.html
@@ -20,8 +20,8 @@
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/" >Украина</a>
-            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
-            <a href="/political-na-postsovet-space/country/lnr/"id="id">ЛНР</a>
+            <a href="/political-na-postsovet-space/country/dni/" id="id">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
     </header>
     <main>
