--- a/country/index.html
+++ b/country/index.html
@@ -59,7 +59,6 @@
                         <th scope="col">Население</th>
                         <th scope="col">Плотность населения (чел./ км<sup>2</sup>)</th>
                         <th scope="col">Дата</th>
-
                     </tr>
                 </thead>
                 <tbody class="ussr">
@@ -117,7 +116,7 @@
                 </tbody>
             </table>
             <br><br>
-            <h2>Главы стран Постсоветского пространства</h2>
+            <h2>Главы стран Республики Беларусь, Российской Федерации и Украины</h2>
 
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
