--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -166,8 +166,10 @@
                     <tr>
                         <th scope="row" rowspan="2">1</th>
                         <td>1</td>
-                        <td rowspan="2"></td>
-                        <td rowspan="2">Борис Николаевич Ельцин</td>
+                        <td rowspan="2">
+                            <img src="Boris.jpg" alt="">
+                        </td>
+                        <td rowspan="2">Борис Николаевич Ельцин <br> (1931—2007)</td>
                         <td>10 июля 1991</td>
                         <td>9 августа 1996</td>
                         <td>4 года 7 месяцев 9 дней</td>
@@ -181,7 +183,7 @@
                     <tr>
                         <th scope="row" rowspan="2">2</th>
                         <td>1</td>
-                        <td rowspan="2"></td>
+                        <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
                         <td rowspan="2">Владимир Владимирович Путин <br> (р. 1952)</td>
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
@@ -196,7 +198,7 @@
                     <tr>
                         <th scope="row">3</th>
                         <td>1</td>
-                        <td></td>
+                        <td><img src="Dmitry_Anatolyevich_Medvedev.jpg" alt=""></td>
                         <td>Дмитрий Анатольевич Медведев <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
                         <td>7 мая 2012</td>
@@ -204,15 +206,15 @@
                     </tr>
                     <tr>
                         <th scope="row" rowspan="2">4</th>
-                        <td>1</td>
-                        <td rowspan="2"></td>
+                        <td>3</td>
+                        <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt=""></td>
                         <td rowspan="2">Владимир Владимирович Путин <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
                         <td>7 мая 2018</td>
                         <td>6 лет</td>
                     </tr>
                     <tr>
-                        <td>2</td>
+                        <td>4</td>
                         <td>7 мая 2018</td>
                         <td>срок истекает 7 мая 2024</td>
                         <td>6 лет</td>
