--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="gerb-of-Belarus.png" >
     <title>Беларусь</title>
 
 </head>
