--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -32,6 +32,8 @@
     </header>
     <main>
         <div class="container">
+            <h1>Россия</h1>
+            <hr>
             <p>
                 Росси́я, другое официальное название — Росси́йская Федера́ция (РФ), — государство в Восточной
                 Европе и Северной Азии. Территория России в её конституционных границах составляет 17 125 191
