--- a/country/index.html
+++ b/country/index.html
@@ -47,7 +47,7 @@
 
             </p>
             <p>P. S. На этом сайте будут представлены страны востчно-славянского происхождения</p>
-            <table border="1" rules="all" class="table text-info">
+            <table border="1" rules="all" class="table text-info table-bordered">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">Страна</th>
