--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -153,7 +153,7 @@
                 заключений Верховного и Конституционного судов.
             </p>
             <h4>Список президентов РФ</h4>
-            <table border="1" rules="all" class="table text-info">
+            <table border="1" rules="all" class="table text-info table-bordered">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
