--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -133,7 +133,7 @@
                 не менее 2/3 от полного состава Палаты представителей.
             </p>
             <h4>Список президентов Республки Беларусь</h4>
-            <table border="1" rules="all" class="table text-info" width="80%">
+            <table border="1" rules="all" class="table text-info table-bordered" >
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
