--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -159,7 +159,7 @@
                         <th scope="col">№ </th>
                         <th scope="col">Срок</th>
                         <th scope="col">Фото</th>
-                        <th scope="col">Фамилия Имя Отчество (Год жизни)</th>
+                        <th scope="col"> Имя Отчество Фамилия (Год жизни)</th>
                         <th scope="col" colspan="2">Срок полномочий</th>
                         <th scope="col">Срок в годах и месяцах</th>
                     </tr>
