--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -171,7 +171,7 @@
                         <td rowspan="2">
                             <img src="Boris.jpg" alt="">
                         </td>
-                        <td rowspan="2">Борис Николаевич Ельцин <br> (1931—2007)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис Николаевич Ельцин</a> <br> (1931—2007)</td>
                         <td>10 июля 1991</td>
                         <td>9 августа 1996</td>
                         <td>4 года 7 месяцев 9 дней</td>
@@ -186,7 +186,7 @@
                         <th scope="row" rowspan="2">2</th>
                         <td>1</td>
                         <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
-                        <td rowspan="2">Владимир Владимирович Путин <br> (р. 1952)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир Владимирович Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
                         <td>4 года</td>
@@ -201,7 +201,7 @@
                         <th scope="row">3</th>
                         <td>1</td>
                         <td><img src="Dmitry_Anatolyevich_Medvedev.jpg" alt=""></td>
-                        <td>Дмитрий Анатольевич Медведев <br> (р. 1965)</td>
+                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий Анатольевич Медведев</a> <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
                         <td>7 мая 2012</td>
                         <td>4 года</td>
@@ -210,7 +210,7 @@
                         <th scope="row" rowspan="2">4</th>
                         <td>3</td>
                         <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt=""></td>
-                        <td rowspan="2">Владимир Владимирович Путин <br> (р. 1952)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир Владимирович Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
                         <td>7 мая 2018</td>
                         <td>6 лет</td>
